--- a/Homework 2/Untitled-1.html
+++ b/Homework 2/Untitled-1.html
@@ -9,25 +9,26 @@
 <body>
             <h1>Fruit</h1>
 
+
             <a href="#Apple">Apple</a>
             <a href="#Pear">Pear</a>
+           <div class="Fruit"> <img src="./Images/1.jpg" alt="Fruit" width="200" height="200" > </div>
 
 
-
-<p>Fruit and vegetables are part of a healthy, balanced diet and can help you stay healthy. It's important that you eat enough of them.
+               <p>Fruit and vegetables are part of a healthy, balanced diet and can help you stay healthy. It's important that you eat enough of them.
 
     Evidence shows there are significant health benefits to getting at least 5 portions of a variety of fruit and vegetables every day. That's 5 portions of fruit and veg in total, not 5 portions of each. A portion of fruit or vegetables is 80g.
     Fruit and vegetables are also usually low in fat and calories (provided you do not fry them or roast them in lots of oil). That's why eating them can help you maintain a healthy weight and keep your heart healthy.
     </p>
 
     <h2>Apple</h2>
-    <img src="35552.jpg" alt="Apple" width="200" height="200" id="Apple">
+    <img src="./Images/35552.jpg" alt="Apple" width="200" height="200" id="Apple">
     <p>Apples come in a variety of shapes, colors, and flavors and provide a range of nutrients that can benefit many different aspects of a person’s health.
 
         For example, they may help reduce the risk of cancer, obesity, heart disease, diabetes, and several other conditions.</p>
 
     <h2>Pear</h2>
-    <img src="two-pears-on-a-table.jpg" alt="Pear" width="200" height="200"id="Pear">
+    <img src="./Images/two-pears-on-a-table.jpg" alt="Pear" width="200" height="200" id="Pear">
     <p>Pears are a powerhouse fruit, packing fiber, vitamins, and beneficial plant compounds. These nutrients are thought to fight inflammation, promote gut and heart health, protect against certain diseases, and even aid weight loss. Just be sure to eat the peel, as it harbors many of this fruit's nutrients.</p>
     
 </body>
