--- a/Homework 5/index.html
+++ b/Homework 5/index.html
@@ -61,10 +61,72 @@
 </div>
 <hr>
 
+<div class="container">
 <div class="menu4">
-    <div>РЕКЛАМА:</div>
+    <div class="advertisment">РЕКЛАМА:</div>
     <div>
 <img src="./gif/banner-1175x75.gif" alt="gif"> </div>
 </div>
+
+</div>
+
+<div class="menu5">
+    <div class="section statistic">
+        <h2 class="covid main-color">covid-19 в Україні</h2>
+        <div class="graf-cards flex">
+
+            <div class="card-wrap">
+                <p class="inf">підтверджені:</p>
+                <span class="card-item">355601</span>
+                <div class="graf">
+                    <span class="up"></span>
+                    <span class="down"></span>
+                    <span class="middle"></span>
+                </div>
+                <span class="count">+6677</span>
+            </div>
+            <div class="card-wrap">
+                <p class="inf">активні:</p>
+                <span class="card-item">203675</span>
+                <div class="graf">
+                    <span class="up"></span>
+                    <span class="down"></span>
+                    <span class="middle"></span>
+                </div>
+                <span class="count">+3752</span>
+            </div>
+            <div class="card-wrap">
+                <p class="inf">вилікувалось:</p>
+                <span class="card-item">145336</span>
+                <div class="graf">
+                    <span class="up"></span>
+                    <span class="down"></span>
+                    <span class="middle"></span>
+
+                </div>
+                <span class="count">+2799</span>
+            </div>
+            <div class="card-wrap">
+                <p class="inf">померло:</p>
+                <span class="card-item">6590</span>
+                <div class="graf">
+                    <span class="up"></span>
+                    <span class="down"></span>
+                    <span class="middle"></span>
+                </div>
+                <span class="count">+126</span>
+            </div>
+        </div>
+        <p class="sub_title">Всього проведено <span>3087288</span> тести. Дані МОЗ України. Оновлення 26.10.2020 08:47</p>
+        <a class="main-color" href="https://www.pravda.com.ua/cdn/covid-19/cpa/" target="_blank"
+           rel="noopener noreferrer">дивіться на карті</a>
+    </div>
+
+
+</div>
+
+
+
+
 </body>
 </html>
